<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cuda_cpp_pubsub</name>
  <version>0.1.0</version>
  <description>C++ ROS 2 CUDA IPC GPU-to-GPU latency benchmark.</description>
  <maintainer email="noreply@example.com">dora-benchmark</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>cuda_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
