[package]
name = "ros2_benchmark_rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "talker"
path = "src/talker.rs"

[[bin]]
name = "listener"
path = "src/listener.rs"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
rclrs = "0.7"
std_msgs = "*"
rand = "0.8"
csv = "1.3"
libc = "0.2"

# Required by the rclrs example workspace
backtrace = "=0.3.74"

[package.metadata.ros]
install_to_share = []
